--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,9 @@ edition = "2021"
 
 [dependencies]
 libbpf-rs = "0.17"
+udev =  { version = "^0.6.3", features = ["mio08"] }
+mio = { version = "0.8", features = ["os-ext"] }
+glob = "0.3"
 
 [build-dependencies]
 libbpf-cargo = "0.11"
