--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ libbpf-rs = "0.17"
 udev =  { version = "^0.6.3", features = ["mio08"] }
 mio = { version = "0.8", features = ["os-ext"] }
 glob = "0.3"
+libc = "0.2"
 
 [build-dependencies]
 libbpf-cargo = "0.11"
