--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 libbpf-rs = "0.18"
+libbpf-sys = "^0.8.1"
 udev =  { version = "^0.6.3", features = ["mio08"] }
 mio = { version = "0.8", features = ["os-ext"] }
 glob = "0.3"
@@ -14,3 +15,4 @@ libc = "0.2"
 
 [build-dependencies]
 libbpf-cargo = { git = "https://github.com/libbpf/libbpf-rs.git", rev = "bd03a1a" } # "0.12" + bd03a1a
+bindgen = "0.53.1"
