--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ libbpf-sys = "^0.8.1"
 udev =  { version = "^0.6.3", features = ["mio08"] }
 mio = { version = "0.8", features = ["os-ext"] }
 glob = "0.3"
+globset = "0.4"
 libc = "0.2"
 
 [build-dependencies]
