--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,8 +6,8 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-libbpf-rs = "0.18"
-libbpf-sys = "^0.8.1"
+libbpf-rs = "0.20"
+libbpf-sys = "^1.1.0"
 udev =  { version = "^0.6.3", features = ["mio08"] }
 mio = { version = "0.8", features = ["os-ext"] }
 glob = "0.3"
@@ -15,5 +15,5 @@ globset = "0.4"
 libc = "0.2"
 
 [build-dependencies]
-libbpf-cargo = { git = "https://github.com/libbpf/libbpf-rs.git", rev = "bd03a1a" } # "0.12" + bd03a1a
+libbpf-cargo = { version = "0.20" }
 bindgen = "0.53.1"
