--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,9 +10,9 @@ libbpf-rs = "0.20"
 libbpf-sys = "^1.1.0"
 udev =  { version = "^0.6.3", features = ["mio08"] }
 mio = { version = "0.8", features = ["os-ext"] }
-glob = "0.3"
 globset = "0.4"
 libc = "0.2"
+clap = { version = "4.2.1", features = ["derive"] }
 
 [build-dependencies]
 libbpf-cargo = { version = "0.20" }
