Use a logger for debug logging and add --verbose
Instead of passing around a debug boolean everywhere, initialize a
logger with the right debug level and go from there. libbpf_rs has its
own message printing approach so let's hook into that to forward the
events to our logger.

And since libbpf_rs debugging is *really* verbose, switch to use
--debug for that and --verbose for general verbose output.

Signed-off-by: Peter Hutterer <peter.hutterer@who-t.net>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,8 @@ mio = { version = "0.8", features = ["os-ext"] }
 globset = "0.4"
 libc = "0.2"
 clap = { version = "4.2.1", features = ["derive"] }
+log = "0.4"
+stderrlog = "0.5"
 
 [build-dependencies]
 libbpf-cargo = { version = "0.20" }
