--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -19,6 +19,7 @@ stages:
   - prep             # prep work like rebuilding the container images if there is a change
   - build            # for actually building and testing things in a container
   - test
+  - deploy
 
 variables:
   FDO_UPSTREAM_REPO: bentiss/udev-hid-bpf
@@ -138,3 +139,23 @@ cargo fmt:
 
 sast:
   stage: test
+
+
+#################################################################
+#                                                               #
+#                       deploy stage                            #
+#                                                               #
+#################################################################
+
+pages:
+  extends:
+    - .fdo.ci-fairy
+  stage: deploy
+  script:
+    - pip3 install sphinx sphinx-rtd-theme myst-parser
+    - sphinx-build -b html doc public
+  artifacts:
+    paths:
+      - public
+  rules:
+    - if: $CI_COMMIT_BRANCH == "main" && $CI_PIPELINE_SOURCE != "merge_request_event"
