--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ libc = "0.2"
 clap = { version = "4.2.1", features = ["derive"] }
 log = "0.4"
 stderrlog = "0.5"
+errno = "0.3.3"
 
 [build-dependencies]
 libbpf-cargo = { version = "0.20" }
