main: fall back to filenames if our udev device fails
If we get ENODEV for a libudev device during remove, assume the device
has been removed and analyse the provided syspath directly. The last
element is our sysname so let's use that to rm the objects.

This allows us to keep the lookup logic in one place only since we can
now call remove from the udev rules.

Signed-off-by: Peter Hutterer <peter.hutterer@who-t.net>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ clap = { version = "4.2.1", features = ["derive"] }
 log = "0.4"
 stderrlog = "0.5"
 errno = "0.3.3"
+regex = "1.9.1"
 
 [build-dependencies]
 libbpf-cargo = { version = "0.20" }
