--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,6 @@ libbpf-rs = "0.21"
 libbpf-sys = "^1.1.0"
 udev =  { version = "^0.6.3", features = ["mio08"] }
 mio = { version = "0.8", features = ["os-ext"] }
-globset = "0.4"
 libc = "0.2"
 clap = { version = "4.2.1", features = ["derive"] }
 log = "0.4"
@@ -19,6 +18,9 @@ errno = "0.3.3"
 regex = "1.9.1"
 
 [build-dependencies]
+libbpf-rs = "0.21"
 libbpf-cargo = { version = "0.21" }
+log = "0.4"
 bindgen = "0.66.1"
 regex = "1.9.1"
+udev =  { version = "^0.6.3", features = ["mio08"] }
