--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ libbpf-sys = "^1.1.0"
 udev =  { version = "^0.6.3", features = ["mio08"] }
 mio = { version = "0.8", features = ["os-ext"] }
 libc = "0.2"
-clap = { version = "4.2.1", features = ["derive"] }
+clap = { version = "~4.4.18", features = ["derive"] }
 log = "0.4"
 stderrlog = "0.5"
 errno = "0.3.3"
