Split into three directories
Spread the BPF files across three directories:
- testing: for BPF programs that fix an objective bug in the hardware or
  firmware. Most users wills start developing in this directory.
- stable: once a BPF program in testing has been accepted upstream
  and will be in the next kernel release it is moved from testing to
  here.
  Distributions wanting to ship udev-hid-bpf should install the
  BPF programs from stable.
- userhacks: for BPF programs that are pure user preference, things like
  remapping buttons, muting axes because they cause a crash, etc.
  This programs can be collected here but may not be useful to other
  users or only useful after some more modification. They serve mostly
  as a guide/starting point for other user hacks.

Closes #7

Signed-off-by: Peter Hutterer <peter.hutterer@who-t.net>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -155,12 +155,14 @@ install-test:
   parallel:
     matrix:
       - PREFIX: /usr/local
+        FEATURE: [ stable, testing, userhacks ]
       - PREFIX: /usr
+        FEATURE: [ testing ]
   stage: test
   script:
     - ln -s /usr/bin/true /usr/local/bin/udevadm
     - ln -s /usr/bin/true /usr/local/bin/systemd-hwdb
-    - ./install.sh --verbose $PREFIX
+    - ./install.sh --verbose --features $FEATURE $PREFIX
     - test -e $PREFIX/bin/udev-hid-bpf
     # checking for one of them should be enough
     - test -e /lib/firmware/hid/bpf/G10-Mechanical-Gaming-Mouse.bpf.o
@@ -172,7 +174,7 @@ install-test:
       fi
     - echo "$UDEVDIR"
     - test -e $UDEVDIR/udev/rules.d/99-hid-bpf.rules
-    - test -e $UDEVDIR/udev/hwdb.d/99-hid-bpf.hwdb
+    - test -e $UDEVDIR/udev/hwdb.d/99-hid-bpf-$FEATURE.hwdb
 
 #################################################################
 #                                                               #
@@ -194,12 +196,12 @@ make release:
     - ./install.sh --verbose $PREFIX
     - test -e $PREFIX/bin/udev-hid-bpf
     - test -e $PREFIX/lib/udev/rules.d/99-hid-bpf.rules
-    - test -e $PREFIX/lib/udev/hwdb.d/99-hid-bpf.hwdb
+    - test -e $PREFIX/lib/udev/hwdb.d/99-hid-bpf-testing.hwdb
     - test -e /lib/firmware/hid/bpf/HP_Elite_Presenter.bpf.o
     - ./uninstall.sh --verbose $PREFIX
     - test ! -e $PREFIX/bin/udev-hid-bpf
     - test ! -e $PREFIX/lib/udev/rules.d/99-hid-bpf.rules
-    - test ! -e $PREFIX/lib/udev/hwdb.d/99-hid-bpf.hwdb
+    - test ! -e $PREFIX/lib/udev/hwdb.d/99-hid-bpf-testing.hwdb
     - test ! -e /lib/firmware/hid/bpf/HP_Elite_Presenter.bpf.o
     - popd
   variables:
