--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,16 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[features]
+# For the default build, we disable stable. We expect distributions to ship
+# what's in stable so users who build from source should get testing only.
+# Our default install path (/usr/local) will take precedence over the
+# system lookup path (`/lib`).
+default = ["testing"]
+stable = []
+testing = []
+userhacks = []
+
 [dependencies]
 libbpf-rs = "0.21"
 libbpf-sys = "^1.1.0"
