--- a/release_install.sh.in
+++ b/release_install.sh.in
@@ -53,12 +53,13 @@ if [ -z "$UDEVDIR" ]; then
   esac
 fi
 
-echo "Using sudo to remove files from $PREFIX. You may be asked for your password now"
-BPF=$(ls "$SCRIPT_DIR"/lib/firmware/hid/bpf/*.bpf.o)
-INSTALLED_BPF=${BPF//$SCRIPT_DIR/}
-$DRY_RUN sudo rm -f "$PREFIX/$INSTALLED_BPF"
-$DRY_RUN sudo rm -f "$PREFIX"/bin/udev-hid-bpf
-$DRY_RUN sudo rm -f "$UDEVDIR"/udev/rules.d/99-hid-bpf.rules
-$DRY_RUN sudo rm -f "$UDEVDIR"/udev/hwdb.d/99-hid-bpf-*.hwdb
-$DRY_RUN sudo udevadm control --reload
-$DRY_RUN sudo systemd-hwdb update
+find ./ -name "*.rules" -exec sed -i "s|@@BINDIR@@|$PREFIX/bin|" {} \;
+
+echo "Using sudo to install files into $PREFIX. You may be asked for your password now"
+dryrun_sudo="$DRY_RUN sudo"
+@@INSTALL_COMMANDS@@
+$dryrun_sudo install -D -t "$PREFIX"/bin/ "$SCRIPT_DIR"/bin/udev-hid-bpf
+$dryrun_sudo install -D -m 644 -t "$UDEVDIR"/udev/rules.d "$SCRIPT_DIR"/lib/udev/rules.d/99-hid-bpf.rules
+$dryrun_sudo install -D -m 644 -t "$UDEVDIR"/udev/hwdb.d "$SCRIPT_DIR"/lib/udev/hwdb.d/99-hid-bpf-*.hwdb
+$dryrun_sudo udevadm control --reload
+$dryrun_sudo systemd-hwdb update
