--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,8 @@ log = "0.4"
 stderrlog = "0.5"
 errno = "0.3.3"
 regex = "1.9.1"
+serde = { version = "1.0.197", features = ["derive"] }
+serde_json = "1.0.115"
 
 [build-dependencies]
 libbpf-rs = "0.21"
