meson: use arrays for options
Otherwise we get:
```
> meson setup -Dbpfs=testing,userhacks builddir
The Meson build system
Version: 1.3.2
Source dir: /home/btissoir/Src/udev-hid-bpf
Build dir: /home/btissoir/Src/udev-hid-bpf/builddir
Build type: native build

meson.build:1:0: ERROR: Value "testing,userhacks" (of type "string")
for combo option "The subset of BPF programs to build" is not one of
the choices. Possible choices are (as string): "testing", "stable",
"userhacks".

A full log can be found at ./builddir/meson-logs/meson-log.txt
```

Arrays allow for multiple values to be selected and then removes a manual
split when dealing with `have_filters`

Signed-off-by: Benjamin Tissoires <benjamin.tissoires@gmail.com>

--- a/meson.build
+++ b/meson.build
@@ -16,8 +16,7 @@ if udevdir == ''
 endif
 
 filters = get_option('bpf-filter')
-have_filters = filters != ''
-filters = filters.split(',')
+have_filters = filters != []
 
 subset = get_option('bpfs')
 build_testing = 'testing' in subset or have_filters
