--- a/meson_options.txt
+++ b/meson_options.txt
@@ -3,13 +3,13 @@ option('udevdir',
        value: '/etc/udev',
        description: 'udev base directory, default=/etc/udev')
 option('bpfs',
-       type: 'combo',
+       type: 'array',
        choices: ['testing', 'stable', 'userhacks'],
-       value: 'testing',
+       value: ['testing'],
        description: 'The subset of BPF programs to build')
 option('bpf-filter',
-       type: 'string',
-       value: '',
+       type: 'array',
+       value: [],
        description: 'A comma-separated list of substrings to match against BPF files. Only BPF files matching the filter will be installed.')
 option('placeholder-udev-rules-file',
        type: 'boolean',
