bpf/userhacks: makes it clear the G10 gaming mouse is a PoC
Users might think this is required for this mouse to behave properly
when this is actually breaking the mouse, but shows the benefits of
HID-BPF.

Also allow the program to be bound to the mouse (change in probe), while
removing the entry in the generated hwdb so we don't break user devices.

Signed-off-by: Benjamin Tissoires <benjamin.tissoires@gmail.com>

--- a/src/bpf/userhacks/meson.build
+++ b/src/bpf/userhacks/meson.build
@@ -3,8 +3,8 @@ if not build_userhacks
 endif
 
 sources = [
+    'mouse_invert_y.bpf.c',
     'trace_hid_events.bpf.c',
-    'G10-Mechanical-Gaming-Mouse.bpf.c'
 ]
 
 foreach bpf : sources
